dnl Process this file with autoconf to produce a configure script.
dnl $Id$

AC_INIT(trurlib, 0.43.9)
AC_CONFIG_SRCDIR([n_array_new.c])
AM_INIT_AUTOMAKE

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_RANLIB
AM_CONFIG_HEADER([config.h])
AC_DISABLE_SHARED
AM_PROG_LIBTOOL

dnl Checks for header files.
AC_HEADER_STDC
AC_C_INLINE
AC_CHECK_HEADERS(limits.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T

dnl Checks for library functions.
AC_CHECK_FUNCS(strdup strspn)


AC_CONFIG_FILES([ Makefile
	    trurlib.spec ])
AC_OUTPUT
