dnl Process this file with autoconf to produce a configure script.
dnl $Id$

AC_INIT(n_array_new.c)
AM_INIT_AUTOMAKE(trurlib, 0.44.0)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_RANLIB
AM_CONFIG_HEADER(config.h)
#AC_DISABLE_SHARED
AM_PROG_LIBTOOL

AM_CFLAGS="-Wall -W"
AC_SUBST(AM_CFLAGS)


dnl Checks for header files.
AC_HEADER_STDC
AC_C_INLINE
AC_CHECK_HEADERS(limits.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T

dnl Checks for library functions.
AC_CHECK_FUNCS(strdup strspn)
AC_CHECK_FUNCS(fopencookie,,,$CONF_IN_LDFLAGS)

AC_CHECK_LIB(z, gzopen)

AC_OUTPUT([ Makefile
	    trurlib.spec ])
